imagem de fundo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>TecChat</title>
   </head>
   <body>
+    <div class="bg"></div>
     <section class="container">
       <section class="login">
         <h2>Login</h2>
@@ -27,7 +28,7 @@
 
       <section class="chat">
         <section class="chat__messages">
-          <div class="message--self">
+          <!-- <div class="message--self">
             Hellow word
             <span class="hora">12:00</span>
           </div>
@@ -35,7 +36,7 @@
           <div class="message--other">
             <p class="message--sender">bruno</p>
             Ola mundooo! <span class="hora">12:00</span>
-          </div>
+          </div> -->
         </section>
 
         <form action="" class="chat__form">
