--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_right_alt"
     />
     <link rel="stylesheet" href="style.css" />
+    <style></style>
     <title>TecChat</title>
   </head>
   <body>
